TheMightyDude (19 July 2012)
--------------------------------------
Indented the traderoute.php file.
Fixed most if not all Notice: Use of undefined constant source_type - assumed 'source_type' messages.
Fixed Blank White screen when logged in and server is closed.
Once again Fixed invalid character in header.php and Notice: Undefined variable: l_lang_attribute.
Fixed  Notice: Use of undefined constant ship_id - assumed 'ship_id' and character_name - assumed 'character_name'
Fixed Notice: Undefined variable: targetinfo and missing language vars.
Fixed Notice: Use of undefined constant team, response, destination, engage in check_fighters.php
Fixed Movment failed bug when you hit fighters.
Fixed Notice: Use of undefined constant port_goods in traderoute.php
Fixed location to the image folder for main.css
Fixed most of teams.php but will finish later.

TheMightyDude (18 July 2012)
--------------------------------------
Temp hack/fix for the player log until we have a better way to do it.
Fixed bug in main.php, readmail.php, mailto2.php Notice: Use of undefined constant ship_id - assumed 'ship_id'
Fixed Missing language variables when upgrading the ship at the Special Port.
Fixed Depolying Sector Defences, added a div container with overflow so that we can scroll defences.
Fixed Notice: Undefined index: port_shopping in port2.php
Fixed Notice:Use of undefined constant ship_id, undefined offset 1 in check_fighters.php and check_mines.php

TheKabal (18 July 2012)     
--------------------------------------  
Add slashes to subject before saving to database, allowing apostrohphes ("It can't work otherwise").
Restore changes from changelog
Fix undefined constant 'team' in planet_report.     
Fix missing space in "You have messages waiting" alert in main  
Fix undefined constants in includes/calc_ownership.php  
Fix missing language string "Planet" in planet menu     
Fix undefined variable l_toplanetmenu in planet2 when transferring to planet    