@@ -1,3 +1,7 @@
+TheMightyDude (20 July 2012)
+--------------------------------------
+Fixed Notice:  Use of undefined constant quantity - assumed 'quantity' and energy_available - assumed 'energy_available' in sched_degrade.php
+
 TheMightyDude (19 July 2012)
 --------------------------------------
 Indented the traderoute.php file.
